Add Early Bird Distribution

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8682,6 +8682,20 @@
         </tr>
         <tr>
           <td>
+            <dfn>A.5.5
+              - Accessibility Campaigns - Early Bird Bonus distribution</dfn>
+          </td>
+          <td>Accessibility Campaigns - Early Bird Bonus distribution</td>
+          <td>Core</td>
+          <td>Early Bird Token Rewards Distribution:• Transfer 27,222,832.8 (120% of the estimated) 
+            newly minted SKY to the following 0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 
+            multisig wallet operated by Facilitator• Burn the remaining SKY in the 
+            0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 multisig that is not used to fund the 
+            MerkleDistributor by calling the burn() function on the multisig, the estimated amount 
+            needed is 22,685,694</td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.5.8
               - A1 - Location Resilience</dfn>
           </td>
