Update splitter to vow
Co-authored-by: 0xldr <139177554+0xldr@users.noreply.github.com>

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -6934,10 +6934,10 @@
           </td>
           <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters</td>
           <td>Section</td>
-          <td>The current Surplus Buffer Splitter parameters are:• splitter.hump: 60m (Threshold of Surplus buffer for Splitter to activate)•
+          <td>The current Surplus Buffer Splitter parameters are:• vow.hump: 60m (Threshold of Surplus buffer for Splitter to activate)•
               Estimated Net protocol Income: 100,765,523• 50% of estimated net protocol income is sent to Splitter: 50,382,762 (for SBE and 
               Seal Module, remaining 50% is accumulated in Surplus Buffer). This value must be regularly updated through an executive vote to 
-              continue to target 50% of the estimated net protocol income.• splitter.bump: 25,000 DAI• splitter.hop: 15,649 seconds• 70% of 
+              continue to target 50% of the estimated net protocol income.• vow.bump: 25,000 DAI• splitter.hop: 15,649 seconds• 70% of 
               Splitter allocation is set to accumulate SKY• 30% of Splitter allocation is set to reward Seal users• burn (the percentage of 
               the vow.bump to be moved to the underlying flapper): 70% (0.70 * WAD). Flapper must maintain its legacy values.</td>
           </td>
