Delegated Voting Power Changes

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -1094,6 +1094,20 @@
         <tr>
           <td>
             <dfn>A.0.1
+              - Atlas Preamble - Definitions - Voting Power</dfn>
+          </td>
+          <td>Atlas Preamble - Definitions - Voting Power</td>
+          <td>Core</td>
+          <td>
+            “Voting Power” denotes the ability of Aligned Delegates to vote on Sky governance decisions on behalf 
+            of a SKY or MKR holder. SKY and MKR holders can delegate their Voting Power to an Aligned Delegate 
+            through Delegate Contracts, allowing the Aligned Delegate to vote on their behalf while the SKY or 
+            MKR holders retain control of their tokens.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.0.1
               - A2 - Atlas Preamble - General Provisions</dfn>
           </td>
           <td>Atlas Preamble - General Provisions</td>
@@ -1979,9 +1993,10 @@
           </td>
           <td>Aligned Delegates - Budget And Participation Requirements - Eligibility To Receive Budget</td>
           <td>Section</td>
-          <td>Aligned Delegates are eligible to receive a budget from the Sky Protocol if they fulfill two (2)
-            requirements: 1) They rank among the top ADs based on total votes delegated to their Delegate
-            Contract, and 2) They fulfill specific participation requirements defined in this Article.</td>
+          <td>Eligibility To Receive Budget - Aligned Delegates are eligible to receive a budget from the Sky Protocol 
+            if they fulfill two (2) requirements: 1) They rank among the top Aligned Delegates based on total Voting 
+            Power delegated to their Delegate Contract, and 2) They fulfill specific participation requirements defined 
+            in this Article.</td>
         </tr>
         <tr>
           <td>
@@ -1991,9 +2006,8 @@
           <td>Aligned Delegates - Budget And Participation Requirements - Prime Delegates</td>
           <td>Section</td>
           <td>
-            Aligned Delegates (ADs) who receive a budget are designated as Prime Delegates (PDs). The PD slots
-            are allocated to the ADs with the highest number of delegated votes. The number of PD slots is
-            specified in <dfn>A.1.5
+            Aligned Delegates with the greatest delegated Voting Power are designated as Prime Delegates and receive a budget. 
+            The number of Prime Delegate slots is specified in  <dfn>A.1.5
               - Aligned Delegates - Budget And Participation Requirements - Number of Prime Delegate
               Slots</dfn>.
           </td>
@@ -2005,8 +2019,7 @@
           </td>
           <td>Aligned Delegates - Budget And Participation Requirements - Number of Prime Delegate Slots</td>
           <td>Section</td>
-          <td>The six (6) Aligned Delegates receiving the highest number of delegated votes are the Prime
-            Delegates (PDs).</td>
+          <td>The six (6) Aligned Delegates with the greatest delegated Voting Power are the Prime Delegates.</td>
         </tr>
         <tr>
           <td>
@@ -10548,12 +10561,12 @@
         </tr>
         <tr>
           <td>
-            <dfn>Total
-              Votes Delegated - Element Annotation</dfn>
+            <dfn>Total Voting Power Delegated - Element Annotation</dfn>
           </td>
-          <td>Total Votes Delegated - Element Annotation</td>
+          <td>Total Voting Power Delegated  - Element Annotation</td>
           <td>Annotation</td>
-          <td>The element “total votes delegated” refers to the cumulative voting power that has been delegated to a Delegate Contract by SKY holders and Sealing users.</td>
+          <td>The element “total Voting Power delegated” refers to the cumulative SKY/MKR that has been delegated 
+            to a Delegate Contract by SKY/MKR holders and Sealing users.</td>
         </tr>
         <tr>
           <td>
