Adding Operational Weekly Cycle

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3039,6 +3039,22 @@
         <tr>
           <td>
             <dfn>A.1.11
+              - Weekly Governance Cycle - Operational Weekly Cycle - Edits To The Atlas</dfn>
+          </td>
+          <td>Weekly Governance Cycle - Operational Weekly Cycle - Edits To The Atlas</td>
+          <td>Core</td>
+          <td>The Operational Weekly Cycle may be used to edit the Atlas only if the pertinent Atlas document specifies 
+            that it, or a related unit of governance logic which it expressly controls, is modifiable through the 
+            Operational Weekly Cycle.<br>The general rule is that an Operational Weekly Cycle proposal requires a Governance 
+            Poll followed by an Executive Vote. The general rule, by default, is assumed wherever the Atlas provides that a 
+            document, or a unit of governance logic controlled by said document, is modifiable through the Operational 
+            Weekly Cycle.<br>Any exception to the general rule must be specifically stated in the pertinent Atlas document. 
+            The possible exceptions include documents that can be modified subject to a Governance Poll only; and documents 
+            that can be modified subject to an Executive Vote only, without requiring a previous Governance Poll.
+          </td>
+        <tr>
+          <td>
+            <dfn>A.1.11
               - Weekly Governance Cycle - Operational Weekly Cycle - Definitions</dfn>
           </td>
           <td>Weekly Governance Cycle - Operational Weekly Cycle - Definitions</td>
